--- a/contacts.html
+++ b/contacts.html
@@ -1,1 +1,254 @@
-<!DOCTYPE html><html lang="ru"><head>  <meta charset="UTF-8">  <meta name="viewport" content="width=device-width, initial-scale=1.0">  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">  <link rel="stylesheet" href="css/style.min.css">  <title>Домашний переезд. Контакты</title></head><body>  <header class="header">    <div class="header__top-wrapper">      <div class="container">        <div class="header__top-inner">          <a class="header__logo" href="index.html">            <picture><source srcset="img/logo.webp" type="image/webp"><img class="header__logo-img" src="img/logo.png" alt="логотип" title="логотип компании"></picture>          </a>          <ul class="header__contact-list">            <li class="header__contact-item">              <a class="header__contact-link" href="tel:89505664666">                8 (950) 566-46-66              </a>            </li>            <li class="header__contact-item">              <a class="header__contact-link header__contact-link--mail" href="mailto:gruz11reg@yandex.ru">                gruz11reg@yandex.ru              </a>            </li>            <li class="header__contact-item">              <a class="header__contact-btn btn feedback-btn" href="#">                Обратная связь              </a>            </li>          </ul>        </div>      </div>    </div>    <div class="header__bottom-wrapper">      <div class="container">        <nav class="header__nav">          <div class="menu-burger">            <span></span>            <span></span>            <span></span>          </div>          <ul class="header__nav-list">            <li class="header__nav-item submenu">              <a class="header__nav-link header__nav-link--popup" href="about.html">                О компании              </a>              <span class="arrow"></span>              <ul class="submenu__list submenu__list--left">                <li class="submenu__item">                  <a class="submenu__link" href="requisites.html">                    Реквизиты                  </a>                </li>                <li class="submenu__item">                  <a class="submenu__link" href="#">                    Шаблоны договора                  </a>                </li>                <li class="submenu__item">                  <a class="submenu__link" href="#">                    Политика конфиденциальности                  </a>                </li>              </ul>            </li>            <li class="header__nav-item submenu">              <a class="header__nav-link header__nav-link--popup" href="services.html">                Услуги              </a>              <span class="arrow"></span>              <ul class="submenu__list">                <li class="submenu__item">                  <a class="submenu__link" href="services-moving.html">                    Домашние переезды                  </a>                </li>                <li class="submenu__item">                  <a class="submenu__link" href="#">                    Офисные переезды                  </a>                </li>                <li class="submenu__item">                  <a class="submenu__link" href="#">                    Дачные переезды                  </a>                </li>                <li class="submenu__item">                  <a class="submenu__link" href="#">                    Грузоперевозки по России                  </a>                </li>              </ul>            </li>            <li class="header__nav-item">              <a class="header__nav-link" href="calculator.html">                Калькулятор              </a>            </li>            <li class="header__nav-item">              <a class="header__nav-link" href="price.html">                Прайс              </a>            </li>            <li class="header__nav-item">              <a class="header__nav-link" href="contacts.html">                Контакты              </a>            </li>          </ul>        </nav>      </div>    </div>  </header>  <main class="main">    <div class="container">      <div class="breadcrumbs">        <ul class="breadcrumbs__list">          <li class="breadcrumbs__item">            <a class="breadcrumbs__link" href="index.html">              Главная            </a>          </li>          <li class="breadcrumbs__item">            <a class="breadcrumbs__link" href="#">              Контакты            </a>          </li>        </ul>      </div>      <section class="contacts-page">        <h1 class="contacts-page__title title">          Контакты        </h1>        <strong class="contacts-page__text-title">          Координаты нашего офиса        </strong>        <p class="contacts-page__text">          167000, г. Сыктывкар, ул. Огородная, д. 6, оф. 2          Руководство: <a href="mailto:gruz11reg@yandex.ru">gruz11reg@yandex.ru</a>          тел: <a href="tel:89505664666">89505664666</a>, <a href="tel:89635573577">89635573577</a>          График работы: с 8:00 до 20:00        </p>        <a class="contacts-page__download link" href="#" download="">          Скачать реквизиты        </a>        <div class="contacts-page__map">          <iframe            src="https://yandex.ru/map-widget/v1/?um=constructor%3A80e403b44867aa7bb4c8013aaa5a2dc49f3fa1973bc43a289dc29ef459f5de6e&amp;source=constructor"            frameborder="0"></iframe>        </div>        <a class="contacts-page__btn btn btn--green request-btn" href="#">          Оставить заявку        </a>      </section>    </div>  </main>  <footer class="footer">    <div class="container">      <div class="footer__top">        <p class="footer__address">          Офис: 167000, г. Сыктывкар, ул. Огородная, д. 6, оф. 2          График работы: с 8:00 до 20:00        </p>        <ul class="footer__contacts">          <li class="footer__contact">            <p class="footer__contact-text">              Тел:              <a class="footer__contact-link" href="tel:89505664666">8 (950) 566-46-66</a>,              <a class="footer__contact-link" href="tel:89635573577">8 (963) 557-35-77</a>            </p>          </li>          <li class="footer__contact">            <p class="footer__contact-text">              E-mail:              <a class="footer__contact-link" href="mailto:gruz11reg@yandex.ru">gruz11reg@yandex.ru</a>            </p>          </li>        </ul>        <a class="footer__btn btn btn--white feedback-btn" href="#">          Обратная связь        </a>      </div>      <div class="footer__bottom">        <p class="footer__copy">          © 2017 Домашний переезд        </p>        <p class="footer__dev">          Разработка: <a class="footer__dev-link" href="https://it-rkomi.ru/" target="_blank">«Информационные            технологии»</a>        </p>      </div>    </div>  </footer>  <div class="modal feedback">    <div class="modal__wrapper">      <div class="modal__top">        <p class="modal__text">          Форма обратной связи        </p>        <button class="modal__btn-close" type="button">          Закрыть        </button>      </div>      <form action="#" class="modal__form feedback__form">        <label class="modal__form-label" for="name">Ваше имя</label>        <input class="modal__form-input" type="text" id="name">        <label class="modal__form-label" for="phone">Телефон</label>        <input class="modal__form-input" type="tel" id="phone">        <input class="modal__form-check visually-hidden" type="checkbox" id="check" checked>        <label class="modal__label-check" for="check">Согласен на обработку персональных данных</label>        <button class="modal__form-btn btn">Отправить</button>      </form>    </div>  </div>  <div class="modal request">    <div class="modal__wrapper">      <div class="modal__top">        <p class="modal__text">          Оставить заявку        </p>        <button class="modal__btn-close" type="button">          Закрыть        </button>      </div>      <form action="#" class="modal__form request__form">        <label class="modal__form-label" for="name">Ваше имя</label>        <input class="modal__form-input" type="text" id="name">        <label class="modal__form-label" for="phone">Телефон</label>        <input class="modal__form-input" type="tel" id="phone">        <label class="modal__form-label" for="info">Краткая информация</label>        <textarea class="modal__form-textarea" type="tel" id="info"></textarea>        <input class="modal__form-check visually-hidden" type="checkbox" id="check" checked>        <label class="modal__label-check" for="check">Согласен на обработку персональных данных</label>        <button class="modal__form-btn btn">Отправить</button>      </form>    </div>  </div>  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>  <script src="js/script.min.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="ru">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.min.css">
+  <title>Домашний переезд. Контакты</title>
+</head>
+
+<body>
+
+  <header class="header">
+    <div class="header__top-wrapper">
+      <div class="container">
+        <div class="header__top-inner">
+          <a class="header__logo" href="index.html">
+            <picture><source srcset="img/logo.webp" type="image/webp"><img class="header__logo-img" src="img/logo.png" alt="логотип" title="логотип компании"></picture>
+          </a>
+          <ul class="header__contact-list">
+            <li class="header__contact-item">
+              <a class="header__contact-link" href="tel:89505664666">
+                8 (950) 566-46-66
+              </a>
+            </li>
+            <li class="header__contact-item">
+              <a class="header__contact-link header__contact-link--mail" href="mailto:gruz11reg@yandex.ru">
+                gruz11reg@yandex.ru
+              </a>
+            </li>
+            <li class="header__contact-item">
+              <a class="header__contact-btn btn feedback-btn" href="#">
+                Обратная связь
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="header__bottom-wrapper">
+      <div class="container">
+        <nav class="header__nav">
+          <div class="menu-burger">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+          <ul class="header__nav-list">
+            <li class="header__nav-item submenu">
+              <a class="header__nav-link header__nav-link--popup" href="about.html">
+                О компании
+              </a>
+              <span class="arrow"></span>
+              <ul class="submenu__list submenu__list--left">
+                <li class="submenu__item">
+                  <a class="submenu__link" href="requisites.html">
+                    Реквизиты
+                  </a>
+                </li>
+                <li class="submenu__item">
+                  <a class="submenu__link" href="#">
+                    Шаблоны договора
+                  </a>
+                </li>
+                <li class="submenu__item">
+                  <a class="submenu__link" href="#">
+                    Политика конфиденциальности
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class="header__nav-item submenu">
+              <a class="header__nav-link header__nav-link--popup" href="services.html">
+                Услуги
+              </a>
+              <span class="arrow"></span>
+              <ul class="submenu__list">
+                <li class="submenu__item">
+                  <a class="submenu__link" href="services-moving.html">
+                    Домашние переезды
+                  </a>
+                </li>
+                <li class="submenu__item">
+                  <a class="submenu__link" href="#">
+                    Офисные переезды
+                  </a>
+                </li>
+                <li class="submenu__item">
+                  <a class="submenu__link" href="#">
+                    Дачные переезды
+                  </a>
+                </li>
+                <li class="submenu__item">
+                  <a class="submenu__link" href="#">
+                    Грузоперевозки по России
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class="header__nav-item">
+              <a class="header__nav-link" href="calculator.html">
+                Калькулятор
+              </a>
+            </li>
+            <li class="header__nav-item">
+              <a class="header__nav-link" href="price.html">
+                Прайс
+              </a>
+            </li>
+            <li class="header__nav-item">
+              <a class="header__nav-link" href="contacts.html">
+                Контакты
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
+
+  <main class="main">
+    <div class="container">
+      <div class="breadcrumbs">
+        <ul class="breadcrumbs__list">
+          <li class="breadcrumbs__item">
+            <a class="breadcrumbs__link" href="index.html">
+              Главная
+            </a>
+          </li>
+          <li class="breadcrumbs__item">
+            <a class="breadcrumbs__link" href="#">
+              Контакты
+            </a>
+          </li>
+        </ul>
+      </div>
+      <section class="contacts-page">
+        <h1 class="contacts-page__title title">
+          Контакты
+        </h1>
+        <strong class="contacts-page__text-title">
+          Координаты нашего офиса
+        </strong>
+        <p class="contacts-page__text">
+          167000, г. Сыктывкар, ул. Огородная, д. 6, оф. 2
+          Руководство: <a href="mailto:gruz11reg@yandex.ru">gruz11reg@yandex.ru</a>
+          тел: <a href="tel:89505664666">89505664666</a>, <a href="tel:89635573577">89635573577</a>
+          График работы: с 8:00 до 20:00
+        </p>
+        <a class="contacts-page__download link" href="#" download="">
+          Скачать реквизиты
+        </a>
+        <div class="contacts-page__map">
+          <iframe
+            src="https://yandex.ru/map-widget/v1/?um=constructor%3A80e403b44867aa7bb4c8013aaa5a2dc49f3fa1973bc43a289dc29ef459f5de6e&amp;source=constructor"
+            frameborder="0"></iframe>
+        </div>
+        <a class="contacts-page__btn btn btn--green request-btn" href="#">
+          Оставить заявку
+        </a>
+      </section>
+    </div>
+  </main>
+
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__top">
+        <p class="footer__address">
+          Офис: 167000, г. Сыктывкар, ул. Огородная, д. 6, оф. 2
+          График работы: с 8:00 до 20:00
+        </p>
+        <ul class="footer__contacts">
+          <li class="footer__contact">
+            <p class="footer__contact-text">
+              Тел:
+              <a class="footer__contact-link" href="tel:89505664666">8 (950) 566-46-66</a>,
+              <a class="footer__contact-link" href="tel:89635573577">8 (963) 557-35-77</a>
+            </p>
+          </li>
+          <li class="footer__contact">
+            <p class="footer__contact-text">
+              E-mail:
+              <a class="footer__contact-link" href="mailto:gruz11reg@yandex.ru">gruz11reg@yandex.ru</a>
+            </p>
+          </li>
+
+        </ul>
+        <a class="footer__btn btn btn--white feedback-btn" href="#">
+          Обратная связь
+        </a>
+      </div>
+      <div class="footer__bottom">
+        <p class="footer__copy">
+          © 2017 Домашний переезд
+        </p>
+        <p class="footer__dev">
+          Разработка: <a class="footer__dev-link" href="https://it-rkomi.ru/" target="_blank">«Информационные
+            технологии»</a>
+        </p>
+      </div>
+    </div>
+  </footer>
+
+  <div class="modal feedback">
+    <div class="modal__wrapper">
+      <div class="modal__top">
+        <p class="modal__text">
+          Форма обратной связи
+        </p>
+        <button class="modal__btn-close" type="button">
+          Закрыть
+        </button>
+      </div>
+      <form action="#" class="modal__form feedback__form">
+        <label class="modal__form-label" for="name">Ваше имя</label>
+        <input class="modal__form-input" type="text" id="name">
+        <label class="modal__form-label" for="phone">Телефон</label>
+        <input class="modal__form-input" type="tel" id="phone">
+        <input class="modal__form-check visually-hidden" type="checkbox" id="check" checked>
+        <label class="modal__label-check" for="check">Согласен на обработку персональных данных</label>
+        <button class="modal__form-btn btn">Отправить</button>
+      </form>
+    </div>
+  </div>
+
+  <div class="modal request">
+    <div class="modal__wrapper">
+      <div class="modal__top">
+        <p class="modal__text">
+          Оставить заявку
+        </p>
+        <button class="modal__btn-close" type="button">
+          Закрыть
+        </button>
+      </div>
+      <form action="#" class="modal__form request__form">
+        <label class="modal__form-label" for="name">Ваше имя</label>
+        <input class="modal__form-input" type="text" id="name">
+        <label class="modal__form-label" for="phone">Телефон</label>
+        <input class="modal__form-input" type="tel" id="phone">
+        <label class="modal__form-label" for="info">Краткая информация</label>
+        <textarea class="modal__form-textarea" type="tel" id="info"></textarea>
+        <input class="modal__form-check visually-hidden" type="checkbox" id="check" checked>
+        <label class="modal__label-check" for="check">Согласен на обработку персональных данных</label>
+        <button class="modal__form-btn btn">Отправить</button>
+      </form>
+    </div>
+  </div>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="js/script.min.js"></script>
+</body>
+
+</html>
